# blender-outliner-icon-bridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py
docs/: INTEGRATION.md
native/: outliner_icon_hook.cpp  symbol_probe.cpp
native/include/: outliner_icon_hook_api.h
outliner_icon_runtime/: __init__.py  bridge.py  known_builds.json
